--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -32,9 +32,12 @@ jobs:
           r-version: ${{ matrix.r-version }}
       - name: Install dependencies
         run: |
-          install.packages(c("remotes", "rcmdcheck"))
+          install.packages(c("remotes", "rcmdcheck","roxygen2"))
           remotes::install_deps(dependencies = TRUE)
         shell: Rscript {0}
       - name: Check
         run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
-        shell: Rscript {0}
+        shell: Rscript {0}     
+      - name: Build package
+        run: R CMD build --documentation .
+
