--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,31 @@
 Package: grangersearch
-Title: grangeRsearch 
+Title: Granger Causality Testing for Time Series
 Version: 0.1.0
-Authors@R: person("Nikolaos", "Korfiatis", email = "n.korfiatis@uea.ac.uk", role = c("aut", "cre"))
-Description: My package performs a Granger causality test on two time series X and Y.
+Authors@R:
+    person("Nikolaos", "Korfiatis", , "nkorf@ionio.gr", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0001-6377-4837"))
+Description: Performs Granger causality tests on pairs of time series to determine
+    causal relationships. Uses Vector Autoregressive (VAR) models to test whether
+    one time series helps predict another beyond what the series' own past values
+    provide. Returns structured results including p-values, test statistics, and
+    causality conclusions for both directions.
 License: MIT + file LICENSE
+Depends: R (>= 4.1.0)
+URL: https://github.com/nkorf/grangersearch
+BugReports: https://github.com/nkorf/grangersearch/issues
 Encoding: UTF-8
 LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.3
+Imports:
+    vars,
+    stats,
+    rlang (>= 1.0.0),
+    tibble,
+    generics
+Suggests:
+    testthat (>= 3.0.0),
+    knitr,
+    rmarkdown
+Config/testthat/edition: 3
+VignetteBuilder: knitr
