--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -30,6 +30,8 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.r-version }}
+      - name: Set up Pandoc
+        uses: r-lib/actions/setup-pandoc@v2
       - name: Install dependencies
         run: |
           install.packages(c("remotes", "rcmdcheck","roxygen2"))
